--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "css-loader": "^1.0.1",
     "express": "^4.17.1",
     "install": "^0.13.0",
+    "mysql": "^2.17.1",
     "node-sass": "^4.13.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
@@ -28,7 +29,7 @@
     "style-loader": "^0.23.1",
     "ts-loader": "^5.4.5",
     "typescript": "^3.7.4",
-    "webpack": "^4.41.4",
+    "webpack": "^4.41.5",
     "webpack-cli": "^3.3.10",
     "webpack-node-externals": "^1.7.2"
   },
